Update HTML structure and content for design changes

--- a/index.html
+++ b/index.html
@@ -2,37 +2,33 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Scratch風 サイトサンプル</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>Scratch風デザイン サイト</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header>
-    <img src="https://upload.wikimedia.org/wikipedia/commons/5/5a/Scratch_cat.svg" alt="Scratch Cat" class="icon">
-    <h1>Scratch風 サイト</h1>
+  <header class="scratch-header">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/5/5a/Scratch_cat.svg" alt="Scratch Cat" class="scratch-logo">
+    <span class="scratch-title">Scratch風デザイン</span>
     <nav>
-      <a href="#">ホーム</a>
-      <a href="#">使い方</a>
-      <a href="#">作品例</a>
+      <a href="#" class="scratch-nav-link">プロジェクト</a>
+      <a href="#" class="scratch-nav-link">アイデア</a>
+      <a href="#" class="scratch-nav-link">コミュニティ</a>
     </nav>
   </header>
   <main>
-    <section>
-      <h2>Scratchって？</h2>
-      <p>Scratchはブロックを組み合わせてプログラムを作れる学習ツールです。<br>
-        このサイトはScratch風のデザインサンプルです。</p>
+    <section class="scratch-block-area">
+      <div class="scratch-block motion">10歩動かす</div>
+      <div class="scratch-block looks">「こんにちは」と言う</div>
+      <div class="scratch-block control">もし◯◯なら</div>
     </section>
     <section>
-      <h2>サンプルブロック</h2>
-      <div class="block-container">
-        <div class="block motion">10歩動かす</div>
-        <div class="block control">もし◯◯なら　●●する</div>
-        <div class="block looks">「こんにちは」と言う</div>
-      </div>
+      <h2>Scratchについて</h2>
+      <p>Scratchはブロックを並べて組み合わせることでプログラムを作る、世界的に人気のある教育用プログラミングツールです。</p>
     </section>
   </main>
-  <footer>
-    <small>&copy; 2025 Scratch風サンプルサイト</small>
+  <footer class="scratch-footer">
+    <small>© 2025 Scratch風デザイン サイト</small>
   </footer>
 </body>
 </html>
