--- a/index.html
+++ b/index.html
@@ -9,12 +9,24 @@
     body {
       background: #f7f7f7;
       font-family: "Segoe UI", sans-serif;
+      margin: 0;
+      padding: 0;
     }
 
+    /* ヘッダー設定 */
     header {
-      background: #fff;
-      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
-      border-radius: 0 0 1rem 1rem;
+      position: relative;
+      top: 20px; /* 少し下げる */
+      margin: 0 auto;
+      width: calc(100% - 40px);
+      background: #ffffff;
+      border-radius: 50px; /* ← 全角をしっかり丸く */
+      box-shadow: 0 3px 8px rgba(0, 0, 0, 0.1);
+      padding: 12px 24px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      z-index: 10;
     }
 
     .nav-links a {
@@ -27,17 +39,18 @@
       transform: translateY(-1px);
     }
 
+    /* モバイルメニュー */
     @media (max-width: 768px) {
       .nav-links {
         display: none;
         flex-direction: column;
         background: #fff;
         position: absolute;
-        top: 60px;
-        right: 1rem;
-        width: 180px;
-        border-radius: 0.75rem;
-        box-shadow: 0 2px 8px rgba(0,0,0,0.15);
+        top: 70px;
+        right: 20px;
+        width: 200px;
+        border-radius: 30px;
+        box-shadow: 0 3px 10px rgba(0, 0, 0, 0.15);
         padding: 0.5rem 0;
       }
       .nav-links.open {
@@ -45,9 +58,14 @@
       }
     }
 
+    main {
+      margin-top: 80px; /* ヘッダーの下に余白 */
+    }
+
     main section {
       display: none;
     }
+
     main section.active {
       display: block;
       animation: fadeIn 0.2s ease;
@@ -60,7 +78,7 @@
   </style>
 </head>
 <body>
-  <header class="flex justify-between items-center px-6 py-3 relative">
+  <header>
     <h1 class="text-xl font-bold text-gray-800">My Clean Site</h1>
     <nav>
       <button id="menuBtn" class="text-3xl md:hidden focus:outline-none">☰</button>
@@ -72,25 +90,25 @@
     </nav>
   </header>
 
-  <main class="max-w-3xl mx-auto mt-10 p-6 bg-white rounded-2xl shadow-md">
+  <main class="max-w-3xl mx-auto mt-10 p-6 bg-white rounded-[50px] shadow-md">
     <section id="home" class="active">
       <h2 class="text-2xl font-bold mb-4 text-gray-800">🏠 ホーム</h2>
-      <p class="text-gray-700">ようこそ！シンプルで見やすいクリーンデザインのサイトです。</p>
+      <p class="text-gray-700">ようこそ！角がすべて丸くなったシンプルでクリーンなサイトです。</p>
     </section>
 
     <section id="projects">
       <h2 class="text-2xl font-bold mb-4 text-gray-800">🧩 プロジェクト</h2>
-      <p class="text-gray-700">ここにはあなたの作品を表示できます。</p>
+      <p class="text-gray-700">ここにあなたの作品やアプリを紹介できます。</p>
     </section>
 
     <section id="about">
       <h2 class="text-2xl font-bold mb-4 text-gray-800">💡 このサイトについて</h2>
-      <p class="text-gray-700">黒と白を基調としたシンプルなデザインです。角を丸くして柔らかい印象にしています。</p>
+      <p class="text-gray-700">ヘッダーを50pxの角丸にして柔らかく、全体を上品に仕上げています。</p>
     </section>
   </main>
 
   <script>
-    // ページ切り替え
+    // メニュー切り替え
     const links = document.querySelectorAll('.nav-links a');
     const sections = document.querySelectorAll('main section');
     const navLinks = document.getElementById('navLinks');
@@ -102,7 +120,6 @@
         const target = link.dataset.target;
         sections.forEach(sec => sec.classList.remove('active'));
         document.getElementById(target).classList.add('active');
-        // モバイル時にメニュー閉じる
         navLinks.classList.remove('open');
       });
     });
@@ -112,7 +129,7 @@
       navLinks.classList.toggle('open');
     });
 
-    // メニュー外クリックで閉じる
+    // 外クリックで閉じる
     document.addEventListener('click', e => {
       if (!navLinks.contains(e.target) && !menuBtn.contains(e.target)) {
         navLinks.classList.remove('open');
