--- a/index.html
+++ b/index.html
@@ -1,1 +1,6 @@
-
+<h2>💬 友達チャット</h2>
+<div id="chat"></div>
+<div id="input">
+  <input id="text" placeholder="メッセージを入力..." />
+  <button id="send">送信</button>
+</div>
