Update Firebase config in index.html
Updated Firebase configuration with new credentials.

--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 
   // ✅ ここを自分のfirebaseConfigに置き換える
   const firebaseConfig = {
-    apiKey: "XXXX",
-    authDomain: "XXXX.firebaseapp.com",
-    databaseURL: "https://XXXX-default-rtdb.firebaseio.com",
-    projectId: "XXXX",
-    storageBucket: "XXXX.appspot.com",
-    messagingSenderId: "XXXX",
-    appId: "XXXX"
+    apiKey: "AIzaSyDGPCCNoeWuPAhGpKLdabyAU-5hTdHemw8",
+    authDomain: "my-chat-app-37b9e.firebaseapp.com",
+    projectId: "my-chat-app-37b9e",
+    storageBucket: "my-chat-app-37b9e.firebasestorage.app",
+    messagingSenderId: "111829020213",
+    appId: "1:111829020213:web:44f631c678dcb8525c8b7c",
+    measurementId: "G-KEWGNGJS9V"
   };
 
   const app = initializeApp(firebaseConfig);
