--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   const firebaseConfig = {
     apiKey: "AIzaSyDGPCCNoeWuPAhGpKLdabyAU-5hTdHemw8",
     authDomain: "my-chat-app-37b9e.firebaseapp.com",
-    databaseURL: "https://my-chat-app-37b9e-default-rtdb.firebaseio.com",
+    databaseURL: "https://my-chat-app-37b9e-default-rtdb.asia-southeast1.firebasedatabase.app/",
     projectId: "my-chat-app-37b9e",
     storageBucket: "my-chat-app-37b9e.firebasestorage.app",
     messagingSenderId: "111829020213",
