--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ import { getStorage, ref as sRef, uploadBytes, getDownloadURL } from "https://ww
 const firebaseConfig = {
   apiKey: "AIzaSyDGPCCNoeWuPAhGpKLdabyAU-5hTdHemw8",
   authDomain: "my-chat-app-37b9e.firebaseapp.com",
-  databaseURL: "https://my-chat-app-37b9e-default-rtdb.asia-southeast1.firebasedatabase.app/",
+  databaseURL: "https://my-chat-app-37b9e-default-rtdb.firebaseio.com",
   projectId: "my-chat-app-37b9e",
   storageBucket: "my-chat-app-37b9e.appspot.com",
   messagingSenderId: "111829020213",
