--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>友達チャット</title>
-<script src="./script.js"></script>
+<script type="module" src="script.js"></script>
 <link rel="stylesheet" href="./style.css">
 </head>
 <body>
