--- a/index.html
+++ b/index.html
@@ -7,6 +7,19 @@
 <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+<header id="hd">
+  <div class="menu-toggle">
+    <span></span>
+    <span></span>
+    <span></span>
+  </div>
+  <ul>
+    <li>糞</li>
+    <li>ゴリラ</li>
+    <li>パンツ</li>
+    <li>夢ゴリラ</li>
+  </ul>
+</header>
 <h2>💬 友達チャット</h2>
 <div id="chat"></div>
 <div id="input">
