--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     <span></span>
   </div>
   <ul>
-    <li>糞</li>
-    <li>ゴリラ</li>
-    <li>パンツ</li>
-    <li>夢ゴリラ</li>
+    <li>ホーム</li>
+    <li>チャット</li>
+    <li>翻訳</li>
+    <li>----</li>
   </ul>
 </header>
 <h2>💬 友達チャット</h2>
